--- a/scan4PASE/Base.lproj/LaunchScreen.storyboard
+++ b/scan4PASE/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,13 +16,72 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="TOs-76-8z2">
+                                <rect key="frame" x="210" y="210" width="180" height="180"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="133" id="rWJ-kA-CLW"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="rWJ-kA-CLW"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="rWJ-kA-CLW"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="scan4pase" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="flG-HX-MqA">
+                                <rect key="frame" x="220" y="62" width="160" height="46"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="33"/>
+                                <color key="textColor" red="0.16862745100000001" green="0.50980392159999999" blue="0.78823529410000004" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="TOs-76-8z2" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="4yg-A0-7Mg"/>
+                            <constraint firstItem="TOs-76-8z2" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="9cf-Fb-OUu"/>
+                            <constraint firstItem="flG-HX-MqA" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="COb-Ga-JXk"/>
+                            <constraint firstItem="flG-HX-MqA" firstAttribute="centerX" secondItem="TOs-76-8z2" secondAttribute="centerX" id="Dm1-Yl-97N"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="TOs-76-8z2" secondAttribute="bottom" constant="236" id="HIw-BN-aAE"/>
+                            <constraint firstItem="flG-HX-MqA" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="42" id="NCX-L5-drw"/>
+                            <constraint firstItem="flG-HX-MqA" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="75" id="VZn-h7-Wed"/>
+                            <constraint firstItem="flG-HX-MqA" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="lUz-3n-VzJ"/>
+                            <constraint firstItem="TOs-76-8z2" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="xAX-uI-HFF"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="COb-Ga-JXk"/>
+                                <exclude reference="Dm1-Yl-97N"/>
+                                <exclude reference="VZn-h7-Wed"/>
+                                <exclude reference="xAX-uI-HFF"/>
+                                <exclude reference="HIw-BN-aAE"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="COb-Ga-JXk"/>
+                                <include reference="Dm1-Yl-97N"/>
+                                <exclude reference="NCX-L5-drw"/>
+                                <include reference="VZn-h7-Wed"/>
+                                <exclude reference="lUz-3n-VzJ"/>
+                                <exclude reference="4yg-A0-7Mg"/>
+                                <exclude reference="9cf-Fb-OUu"/>
+                                <include reference="xAX-uI-HFF"/>
+                                <include reference="HIw-BN-aAE"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.5" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Logo" width="180" height="180"/>
+    </resources>
 </document>
