Makes taxable items more visible

--- a/Project/scan4pase/Base.lproj/Main.storyboard
+++ b/Project/scan4pase/Base.lproj/Main.storyboard
@@ -215,13 +215,13 @@
                                 <exclude reference="nfY-I7-cP5"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="9N5-WI-dtM"/>
+                                <exclude reference="th9-h5-njd"/>
+                                <exclude reference="auF-Aq-3CL"/>
+                                <exclude reference="deJ-8r-blv"/>
                                 <exclude reference="Fpt-1L-hQA"/>
                                 <exclude reference="Rh1-wt-UpR"/>
                                 <exclude reference="V7T-KC-aIP"/>
-                                <exclude reference="auF-Aq-3CL"/>
-                                <exclude reference="9N5-WI-dtM"/>
-                                <exclude reference="th9-h5-njd"/>
-                                <exclude reference="deJ-8r-blv"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -231,13 +231,13 @@
                                 <include reference="nfY-I7-cP5"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="9N5-WI-dtM"/>
+                                <include reference="th9-h5-njd"/>
+                                <include reference="auF-Aq-3CL"/>
+                                <include reference="deJ-8r-blv"/>
                                 <include reference="Fpt-1L-hQA"/>
                                 <include reference="Rh1-wt-UpR"/>
                                 <include reference="V7T-KC-aIP"/>
-                                <include reference="auF-Aq-3CL"/>
-                                <include reference="9N5-WI-dtM"/>
-                                <include reference="th9-h5-njd"/>
-                                <include reference="deJ-8r-blv"/>
                             </mask>
                         </variation>
                     </view>
@@ -347,7 +347,7 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="A4300" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ugp-0s-i1Z">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="A4300 (Taxed)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ugp-0s-i1Z">
                                                     <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.16862745100000001" green="0.50980392159999999" blue="0.78823529410000004" alpha="1" colorSpace="calibratedRGB"/>
@@ -428,29 +428,29 @@
                                                     <exclude reference="OrC-I1-Ldf"/>
                                                 </mask>
                                                 <mask key="constraints">
-                                                    <exclude reference="7iT-kc-Nf7"/>
-                                                    <exclude reference="Fb1-Lz-JAF"/>
-                                                    <exclude reference="aJr-XL-cLW"/>
-                                                    <exclude reference="Jea-lb-qfc"/>
-                                                    <exclude reference="EPW-Q5-qtA"/>
-                                                    <exclude reference="d2E-sV-Vgj"/>
-                                                    <exclude reference="lGi-J6-fNX"/>
-                                                    <exclude reference="2KM-h9-cbN"/>
-                                                    <exclude reference="Gk8-l8-hsj"/>
-                                                    <exclude reference="xYL-yK-fpF"/>
-                                                    <exclude reference="N8z-2G-cnr"/>
-                                                    <exclude reference="OcO-2L-7zt"/>
-                                                    <exclude reference="vvq-bR-ary"/>
-                                                    <exclude reference="Ews-o7-fk9"/>
-                                                    <exclude reference="usD-mt-FCA"/>
+                                                    <exclude reference="4Zx-G0-0Lk"/>
+                                                    <exclude reference="SMP-6k-lfx"/>
                                                     <exclude reference="PTy-i1-c6K"/>
                                                     <exclude reference="dGP-mO-xuS"/>
                                                     <exclude reference="iCB-gp-ChW"/>
+                                                    <exclude reference="Jea-lb-qfc"/>
+                                                    <exclude reference="2KM-h9-cbN"/>
+                                                    <exclude reference="Gk8-l8-hsj"/>
+                                                    <exclude reference="xYL-yK-fpF"/>
+                                                    <exclude reference="7iT-kc-Nf7"/>
+                                                    <exclude reference="Fb1-Lz-JAF"/>
+                                                    <exclude reference="aJr-XL-cLW"/>
+                                                    <exclude reference="Ews-o7-fk9"/>
+                                                    <exclude reference="usD-mt-FCA"/>
+                                                    <exclude reference="N8z-2G-cnr"/>
+                                                    <exclude reference="OcO-2L-7zt"/>
+                                                    <exclude reference="vvq-bR-ary"/>
                                                     <exclude reference="EBq-q2-AW5"/>
                                                     <exclude reference="Gll-bz-Xe6"/>
                                                     <exclude reference="NZv-gg-pDT"/>
-                                                    <exclude reference="4Zx-G0-0Lk"/>
-                                                    <exclude reference="SMP-6k-lfx"/>
+                                                    <exclude reference="EPW-Q5-qtA"/>
+                                                    <exclude reference="d2E-sV-Vgj"/>
+                                                    <exclude reference="lGi-J6-fNX"/>
                                                 </mask>
                                             </variation>
                                             <variation key="widthClass=compact">
@@ -466,29 +466,29 @@
                                                     <include reference="OrC-I1-Ldf"/>
                                                 </mask>
                                                 <mask key="constraints">
-                                                    <include reference="7iT-kc-Nf7"/>
-                                                    <include reference="Fb1-Lz-JAF"/>
-                                                    <include reference="aJr-XL-cLW"/>
-                                                    <include reference="Jea-lb-qfc"/>
-                                                    <include reference="EPW-Q5-qtA"/>
-                                                    <include reference="d2E-sV-Vgj"/>
-                                                    <include reference="lGi-J6-fNX"/>
-                                                    <include reference="2KM-h9-cbN"/>
-                                                    <include reference="Gk8-l8-hsj"/>
-                                                    <include reference="xYL-yK-fpF"/>
-                                                    <include reference="N8z-2G-cnr"/>
-                                                    <include reference="OcO-2L-7zt"/>
-                                                    <include reference="vvq-bR-ary"/>
-                                                    <include reference="Ews-o7-fk9"/>
-                                                    <include reference="usD-mt-FCA"/>
+                                                    <include reference="4Zx-G0-0Lk"/>
+                                                    <include reference="SMP-6k-lfx"/>
                                                     <include reference="PTy-i1-c6K"/>
                                                     <include reference="dGP-mO-xuS"/>
                                                     <include reference="iCB-gp-ChW"/>
+                                                    <include reference="Jea-lb-qfc"/>
+                                                    <include reference="2KM-h9-cbN"/>
+                                                    <include reference="Gk8-l8-hsj"/>
+                                                    <include reference="xYL-yK-fpF"/>
+                                                    <include reference="7iT-kc-Nf7"/>
+                                                    <include reference="Fb1-Lz-JAF"/>
+                                                    <include reference="aJr-XL-cLW"/>
+                                                    <include reference="Ews-o7-fk9"/>
+                                                    <include reference="usD-mt-FCA"/>
+                                                    <include reference="N8z-2G-cnr"/>
+                                                    <include reference="OcO-2L-7zt"/>
+                                                    <include reference="vvq-bR-ary"/>
                                                     <include reference="EBq-q2-AW5"/>
                                                     <include reference="Gll-bz-Xe6"/>
                                                     <include reference="NZv-gg-pDT"/>
-                                                    <include reference="4Zx-G0-0Lk"/>
-                                                    <include reference="SMP-6k-lfx"/>
+                                                    <include reference="EPW-Q5-qtA"/>
+                                                    <include reference="d2E-sV-Vgj"/>
+                                                    <include reference="lGi-J6-fNX"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
@@ -657,7 +657,7 @@
                                 <include reference="ZCh-Fc-tFK"/>
                                 <include reference="Frx-dM-g3N"/>
                                 <include reference="gB7-Ly-Kzq"/>
-                                <include reference="pa5-SW-ARV"/>
+                                <exclude reference="pa5-SW-ARV"/>
                             </mask>
                             <mask key="constraints">
                                 <include reference="13q-AR-TpI"/>
@@ -1168,16 +1168,16 @@
                                                     <exclude reference="MoF-5K-VnG"/>
                                                 </mask>
                                                 <mask key="constraints">
-                                                    <exclude reference="ZbR-i7-VpT"/>
-                                                    <exclude reference="tQP-ae-9GL"/>
                                                     <exclude reference="1MY-pk-Riq"/>
                                                     <exclude reference="xtQ-Ec-brF"/>
-                                                    <exclude reference="odp-Qq-ci6"/>
                                                     <exclude reference="4Vb-3F-3v2"/>
                                                     <exclude reference="AQk-cT-F1k"/>
                                                     <exclude reference="Jc1-Il-onE"/>
                                                     <exclude reference="OW4-aw-LHg"/>
                                                     <exclude reference="XLN-H2-MJs"/>
+                                                    <exclude reference="odp-Qq-ci6"/>
+                                                    <exclude reference="ZbR-i7-VpT"/>
+                                                    <exclude reference="tQP-ae-9GL"/>
                                                 </mask>
                                             </variation>
                                             <variation key="widthClass=compact">
@@ -1188,16 +1188,16 @@
                                                     <include reference="MoF-5K-VnG"/>
                                                 </mask>
                                                 <mask key="constraints">
-                                                    <include reference="ZbR-i7-VpT"/>
-                                                    <include reference="tQP-ae-9GL"/>
                                                     <include reference="1MY-pk-Riq"/>
                                                     <include reference="xtQ-Ec-brF"/>
-                                                    <include reference="odp-Qq-ci6"/>
                                                     <include reference="4Vb-3F-3v2"/>
                                                     <include reference="AQk-cT-F1k"/>
                                                     <include reference="Jc1-Il-onE"/>
                                                     <include reference="OW4-aw-LHg"/>
                                                     <include reference="XLN-H2-MJs"/>
+                                                    <include reference="odp-Qq-ci6"/>
+                                                    <include reference="ZbR-i7-VpT"/>
+                                                    <include reference="tQP-ae-9GL"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
@@ -1897,7 +1897,7 @@
                                     <action selector="cancel:" destination="AuK-Ka-yN3" eventType="touchUpInside" id="2wm-CR-UFa"/>
                                 </connections>
                             </button>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="t3a-Cf-dNV">
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="t3a-Cf-dNV">
                                 <rect key="frame" x="-60" y="-14" width="121" height="29"/>
                                 <segments>
                                     <segment title="Yes"/>
